[gd_scene load_steps=2 format=3 uid="uid://b8l33jik3bclu"]

[ext_resource type="Script" path="res://RigidLine.gd" id="1"]

[node name="RigidBody2D" type="RigidBody2D"]
max_contacts_reported = 2
contact_monitor = true
script = ExtResource("1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionTimeout" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="CollisionTimeout" to="." method="_on_CollisionTimeout_timeout"]
